[gd_scene load_steps=4 format=3 uid="uid://cnn2tj2lufokf"]

[ext_resource type="Script" uid="uid://ch3mxyu4ctxwt" path="res://UI/Game Screens/battle.gd" id="1_oxp8w"]
[ext_resource type="Texture2D" uid="uid://ocs2nhouk57d" path="res://Sprites/Backgrounds/battleVillageBG01.png" id="2_7sfm4"]
[ext_resource type="Script" uid="uid://egju4wpj27no" path="res://UI/Game Screens/party_slots.gd" id="3_icv8e"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oxp8w")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(3, 4)
texture = ExtResource("2_7sfm4")
centered = false

[node name="PartySlots" type="Node2D" parent="."]
position = Vector2(329, 511)
script = ExtResource("3_icv8e")

[node name="PartyFront1" type="Marker2D" parent="PartySlots"]
position = Vector2(52, -63)

[node name="PartyFront2" type="Marker2D" parent="PartySlots"]
position = Vector2(52, 54)

[node name="PartyBack1" type="Marker2D" parent="PartySlots"]
position = Vector2(-60, -63)

[node name="PartyBack2" type="Marker2D" parent="PartySlots"]
position = Vector2(-62, 53)

[node name="EnemySlots" type="Node2D" parent="."]
position = Vector2(827, 482)

[node name="Enemy1" type="Marker2D" parent="EnemySlots"]
position = Vector2(-134, -80)

[node name="Enemy2" type="Marker2D" parent="EnemySlots"]
position = Vector2(-136, 67)

[node name="Enemy3" type="Marker2D" parent="EnemySlots"]
position = Vector2(-9, -75)

[node name="Enemy4" type="Marker2D" parent="EnemySlots"]
position = Vector2(3, 67)

[node name="Enemy5" type="Marker2D" parent="EnemySlots"]
position = Vector2(111, -81)

[node name="Enemy6" type="Marker2D" parent="EnemySlots"]
position = Vector2(127, 85)
